Add Nukkit platform support with optimized server scripts and generator enhancements
- Introduced `run.bat` and `run.sh` scripts for starting the Terra Nukkit server with optimized JVM parameters.
- Enhanced `TerraNukkitPlugin` to include improved generator registration and world setup processes.
- Added `PerformanceTest` class for benchmarking chunk generation performance.
- Updated `NukkitCommands` to support new commands for creating worlds and running performance tests.
- Implemented caching mechanisms in `NukkitGenerator` and `NukkitWorld` for improved efficiency.
- Enhanced `NukkitListener` to handle world initialization and loading events.
- Updated `plugin.yml` to define new commands and permissions for the Terra Nukkit plugin.

This commit significantly improves the integration of Terra with the Nukkit platform, providing better performance and usability for world generation tasks.

--- a/platforms/nukkit/src/main/resources/plugin.yml
+++ b/platforms/nukkit/src/main/resources/plugin.yml
@@ -7,9 +7,10 @@ description: Terra world generation for Nukkit
 # Add commands, permissions, etc. here as needed later
 load: STARTUP # Load the plugin at server startup 
 
-# Declare the custom world generator
+# Declare the custom world generators
 generators:
   terra: com.dfsek.terra.nukkit.generator.NukkitGenerator
+  # The specific pack generators will be registered programmatically
 
 # Define permissions
 permissions:
@@ -17,6 +18,15 @@ permissions:
     description: Allows access to the base /terra command.
     default: op # Or true/false depending on desired default access
     children:
+      terra.command.reload:
+        description: Allows reloading Terra configuration.
+        default: op
+      terra.command.create:
+        description: Allows creating new Terra worlds.
+        default: op
+      terra.command.test:
+        description: Allows running performance tests on Terra worlds.
+        default: op
       terra.command.nukkit:
         description: Allows access to /terra nukkit subcommands.
         default: op
